# ChangeLog for www-plugins/noscript
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header $

*noscript-2.3.5 (17 Mar 2012)

  17 Mar 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.3.4 (10 Mar 2012)

  10 Mar 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.3.2 (28 Feb 2012)

  28 Feb 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.3.1 (22 Feb 2012)

  22 Feb 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.3 (11 Feb 2012)

  11 Feb 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.2.9 (04 Feb 2012)

  04 Feb 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.2.8 (25 Jan 2012)

  25 Jan 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.2.7 (19 Jan 2012)

  19 Jan 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.2.6 (13 Jan 2012)

  13 Jan 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.2.5 (03 Jan 2012)

  03 Jan 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.2.4 (20 Dec 2011)

  20 Dec 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.2.3 (09 Dec 2011)

  09 Dec 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.2.1 (23 Nov 2011)

  23 Nov 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.2 (16 Nov 2011)

  16 Nov 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.1.9 (10 Nov 2011)

  10 Nov 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.1.8 (29 Oct 2011)

  29 Oct 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.1.7 (22 Oct 2011)

  22 Oct 2011; Martin Väth <martin@mvath.de>