@@ -1,4 +1,4 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header $
 
@@ -21,7 +21,7 @@
 # or a subset of these.
 # The eclass will then install the extension for all these mozillas,
 # set corresponding dependencies and print corresponding messages.
-: ${MV_MOZ_MOZILLAS="firefox icecat seamonkey"}
+: ${MV_MOZ_MOZILLAS=firefox icecat seamonkey}
 
 # @ECLASS-VARIABLE: MV_MOZ_EXTDIR
 # @DESCRIPTION:
@@ -33,51 +33,51 @@
 # If this variable has the special value "?" (default), it acts like "*" or
 # "" depending on whether MV_MOZ_MOZILLAS applies to more than 1 installed
 # mozilla or not.
-: ${MV_MOZ_EXTDIR="?"}
+: ${MV_MOZ_EXTDIR=?}
 
 inherit multilib
 
-case "${MV_MOZ_MOZILLAS}" in
-''|icecat)
+case ${MV_MOZ_MOZILLAS:-icecat} in
+icecat)
 # We have certainly at most one browser
-	MV_MOZ_EXTDIR="*"
-	RDEPEND=""
-	RDEPEND_END="";;
+	MV_MOZ_EXTDIR='*'
+	RDEPEND=''
+	RDEPEND_END='';;
 *)
-	RDEPEND="|| ("
-	RDEPEND_END="
-)";;
+	RDEPEND='|| ('
+	RDEPEND_END='
+)';;
 esac
-case "${MV_MOZ_MOZILLAS}" in
+case ${MV_MOZ_MOZILLAS} in
 *fire*)
 	RDEPEND="${RDEPEND}
 	>=www-client/firefox-3.6
 	>=www-client/firefox-bin-3.6";;
 esac
-case "${MV_MOZ_MOZILLAS}" in
+case ${MV_MOZ_MOZILLAS} in
 *sea*)
 	RDEPEND="${RDEPEND}
 	>=www-client/seamonkey-2
 	>=www-client/seamonkey-bin-2";;
 esac
-case "${MV_MOZ_MOZILLAS}" in
+case ${MV_MOZ_MOZILLAS} in
 *ice*)
 	RDEPEND="${RDEPEND}
 	>=www-client/icecat-3.6";;
 esac
-RDEPEND="${RDEPEND}${RDEPEND_END}"
+RDEPEND=${RDEPEND}${RDEPEND_END}
 
-DEPEND="app-arch/unzip"
+DEPEND='app-arch/unzip'
 [ -n "${RDEPEND}" ] && DEPEND="${DEPEND}
 ${RDEPEND}"
 
-[ "${MV_MOZ_EXTDIR}" = "*" ] || IUSE="copy_extensions symlink_extensions"
+[ "${MV_MOZ_EXTDIR}" = '*' ] || IUSE='copy_extensions symlink_extensions'
 
 mv_mozextension_src_unpack() {
 	local i
 	if [ -z "${FILENAME}" ]
 	then	for i in ${SRC_URI}
-		do	FILENAME="${i##*/}"
+		do	FILENAME=${i##*/}
 		done
 	fi
 	xpi_unpack "${FILENAME}"
@@ -89,17 +89,17 @@ declare -a MV_MOZ_INS MV_MOZ_PKG MV_MOZ_CPY MV_MOZ_DIR
 
 mv_mozextension_install() {
 	local MOZILLA_EXTENSIONS_DIRECTORY
-	MOZILLA_EXTENSIONS_DIRECTORY="${1}"
+	MOZILLA_EXTENSIONS_DIRECTORY=${1}
 	MV_MOZ_INS=()
 	xpi_install_dirs
 }
 
 mv_mozextension_calc() {
 	local v
-	case "${MV_MOZ_MOZILLAS}" in
-		${1}) false;;
+	case ${MV_MOZ_MOZILLAS} in
+	${1})	false;;
 	esac && return
-	v="$(best_version "${2}")" && [ -n "${v}" ] || return
+	v=`best_version "${2}"` && [ -n "${v}" ] || return
 	MV_MOZ_PKG+=("${v}")
 	MV_MOZ_DIR+=("${3}")
 }
@@ -108,24 +108,24 @@ mv_mozextension_src_install() {
 	local b d e i j k l s
 	MV_MOZ_PKG=()
 	MV_MOZ_DIR=()
-	b="${EPREFIX%/}/usr/$(get_libdir)/"
+	b="${EPREFIX%/}/usr/`get_libdir`/"
 	e="${EPREFIX%/}/opt/"
-	mv_mozextension_calc "*fire*" "www-client/firefox" "${b}firefox"
-	mv_mozextension_calc "*fire*" "www-client/firefox-bin" "${e}firefox"
-	mv_mozextension_calc "*ice*" "www-client/icecat" "${b}icecat"
-	mv_mozextension_calc "*sea*" "www-client/seamonkey" "${b}seamonkey"
-	mv_mozextension_calc "*sea*" "www-client/seamonkey-bin" "${e}seamonkey"
-	[ ${#MV_MOZ_DIR[@]} -ne 0 ] || die "no supported mozilla is installed"
-	d="${MV_MOZ_EXTDIR}"
-	if [ "${d}" = "?" ]
+	mv_mozextension_calc '*fire*' 'www-client/firefox' "${b}firefox"
+	mv_mozextension_calc '*fire*' 'www-client/firefox-bin' "${e}firefox"
+	mv_mozextension_calc '*ice*' 'www-client/icecat' "${b}icecat"
+	mv_mozextension_calc '*sea*' 'www-client/seamonkey' "${b}seamonkey"
+	mv_mozextension_calc '*sea*' 'www-client/seamonkey-bin' "${e}seamonkey"
+	[ ${#MV_MOZ_DIR[@]} -ne 0 ] || die 'no supported mozilla is installed'
+	d=${MV_MOZ_EXTDIR}
+	if [ "${d}" = '?' ]
 	then	if [ ${#MV_MOZ_PKG[@]} -gt 1 ]
-		then	d=""
-		else	d="*"
+		then	d=''
+		else	d='*'
 		fi
 	fi
 	MV_MOZ_SYM=()
 	MV_MOZ_LNK=false
-	if [ "${d}" = "*" ] || ! use symlink_extensions
+	if [ "${d}" = '*' ] || ! use symlink_extensions
 	then	MV_MOZ_CPY=:
 	else	MV_MOZ_CPY=false
 		if [ -n "${d}" ]
@@ -147,9 +147,9 @@ mv_mozextension_src_install() {
 
 mv_mozextension_pkg_preinst() {
 	local i j
-	einfo "checking for switching between dirs and symlinks"
+	einfo 'checking for switching between dirs and symlinks'
 	for i in "${MV_MOZ_SYM[@]}"
-	do	j="${ROOT%/}${i}"
+	do	j=${ROOT%/}${i}
 # There are two forms of installation:
 # (1) symlink mozilla-dir/extensions/X -> $MOZILLA_EXTENSIONS_DIRECTORY/X
 # (2) data in mozilla-dir/extensions/X
@@ -172,8 +172,8 @@ mv_mozextension_pkg_preinst() {
 # we prefer to tell the user only that he has to reemerge the package.
 			eerror
 			eerror "It is necessary to reemerge again ${CATEGORY}/${PN}"
-			eerror "(a directory should be removed in the cleanup after the first emerge"
-			eerror "in order to install a symlink of the same name in the second emerge.)"
+			eerror '(a directory should be removed in the cleanup after the first emerge'
+			eerror 'in order to install a symlink of the same name in the second emerge.)'
 			eerror
 			break
 		}
@@ -183,7 +183,7 @@ mv_mozextension_pkg_preinst() {
 
 mv_mozextension_pkg_postinst() {
 	local i
-	[ "${#MV_MOZ_PKG[@]}" -ge 1 ] || die "no supported mozilla is installed"
+	[ "${#MV_MOZ_PKG[@]}" -ge 1 ] || die 'no supported mozilla is installed'
 	elog "${CATEGORY}/${PN} has been installed for the following packages:"
 	for i in ${MV_MOZ_PKG[@]}
 	do	elog "	${i}"
@@ -192,8 +192,8 @@ mv_mozextension_pkg_postinst() {
 	elog "you might need to reemerge ${CATEGORY}/${PN}"
 	${MV_MOZ_CPY} || {
 		elog
-		elog "The extension was installed using symlinks. This saves space but may require"
-		elog "to remove ~/.mozilla/*/*/extensions.ini for each browser restart."
+		elog 'The extension was installed using symlinks. This saves space but may require'
+		elog 'to remove ~/.mozilla/*/*/extensions.ini for each browser restart.'
 	}
 }
 
@@ -212,31 +212,29 @@ xpi_unpack() {
 	test -d "${S}" || mkdir "${S}"
 	for xpi
 	do	einfo "Unpacking ${xpi} to ${S}"
-		xpiname="${xpi%.*}"
-		xpiname="${xpiname##*/}"
+		xpiname=${xpi%.*}
+		xpiname=${xpiname##*/}
 
-		case "${xpi}" in
-			./*|/*)
-				srcdir=''
-				;;
-			*)
-				srcdir="${DISTDIR}/"
-				;;
+		case ${xpi} in
+		./*|/*)
+			srcdir='';;
+		*)
+			srcdir="${DISTDIR}/";;
 		esac
 
 		test -s "${srcdir}${xpi}" ||  die "${xpi} does not exist"
 
-		case "${xpi##*.}" in
-			ZIP|zip|jar|xpi)
-				mkdir -- "${S}/${xpiname}" && \
-					cd -- "${S}/${xpiname}" && \
-					unzip -qo -- "${srcdir}${xpi}" \
-						|| die "failed to unpack ${xpi}"
-				chmod -R a+rX,u+w,go-w -- "${S}/${xpiname}"
-				;;
-			*)
-				einfo "unpack ${xpi}: file format not recognized. Ignoring."
-				;;
+		case ${xpi##*.} in
+		ZIP|zip|jar|xpi)
+			mkdir -- "${S}/${xpiname}" && \
+				cd -- "${S}/${xpiname}" && \
+				unzip -qo -- "${srcdir}${xpi}" \
+					|| die "failed to unpack ${xpi}"
+			chmod -R a+rX,u+w,go-w -- "${S}/${xpiname}"
+		;;
+		*)
+			einfo "unpack ${xpi}: file format not recognized. Ignoring."
+		;;
 		esac
 	done
 }
@@ -247,11 +245,11 @@ xpi_install() {
 	# You must tell xpi_install which dir to use
 	[ ${#} -ne 1 ] && die "${FUNCNAME} takes exactly one argument. Please specify the directory"
 
-	x="${1}"
+	x=${1}
 	# determine id for extension
 	d='{ /\<\(em:\)*id\>/!d; s/.*[\">]\([^\"<>]*\)[\"<].*/\1/; p; q }'
-	d="$(sed -n -e '/install-manifest/,$ '"${d}" "${x}"/install.rdf)" \
-		&& [ -n "${d}" ] || die "failed to determine extension id"
+	d=`sed -n -e '/install-manifest/,$ '"${d}" "${x}"/install.rdf` \
+		&& [ -n "${d}" ] || die 'failed to determine extension id'
 	if [ -n "${MOZILLA_EXTENSIONS_DIRECTORY}" ]
 	then	d="${MOZILLA_EXTENSIONS_DIRECTORY}/${d}"
 		MV_MOZ_INS+=("${d}")
@@ -260,12 +258,12 @@ xpi_install() {
 	test -d "${D}${d}" || dodir "${d}" || die "failed to create ${d}"
 	${MV_MOZ_LNK} && cp -RPl -- "${x}"/* "${D}${d}" || {
 		${MV_MOZ_LNK} && \
-			ewarn "Failed to hardlink extension. Falling back to USE=copy_extension"
+			ewarn 'Failed to hardlink extension. Falling back to USE=copy_extension'
 		insinto "${d}" && doins -r "${x}"/*
 	} || {
 		${MV_MOZ_LNK} && \
-			die "failed to copy extension please retry emerging with USE=copy_extension"
-		die "failed to copy extension"
+			die 'failed to copy extension. Please retry emerging with USE=copy_extension'
+		die 'failed to copy extension'
 	}
 }
 
