@@ -1,1 +1,1 @@
-DIST noscript-2.3.5.xpi 521058 RMD160 03051d00217c13e7f573b9423571cf228cf9728f SHA1 e1d4196dff9e93399af2957cf368584dce326559 SHA256 b06e8e1332683ae15f04a0ab008165ac02556651f51450413abedbb42e7a824f
+DIST noscript-2.3.6.xpi 520884 RMD160 298c46fa598e35a0c77bd3b2f81166e4374cea0e SHA1 c19a58303db451ad8e674dcea5ccdc53166d1910 SHA256 c9cba045269cfda1b3406ff8a51095127d3583aaf2f8ee52a3dca918f63abab5
