@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+*noscript-2.3.6 (04 Apr 2012)
+
+  04 Apr 2012; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild.
+
 *noscript-2.3.5 (17 Mar 2012)
 
   17 Mar 2012; Martin Väth <martin@mvath.de>
